Should solve issue #657. The event + promises chain was broken; minor change : profanity checker failed with ar language after solving bad last line; Minor change: nested view group's shadow were still visible when the parent group was closed;

--- a/app/src/js/nested_list/style/nested_list.less
+++ b/app/src/js/nested_list/style/nested_list.less
@@ -24,6 +24,7 @@
     padding: 0;
     margin: 0;
     min-height: 0;
+    box-shadow: none;
     .li-group-header {
       display: none;
     }
